# hardwareBuffer

./: build.gradle
app/: build.gradle
app/src/main/java/com/example/copygpu/: MainActivity.java  MyGLRenderer.java
app/src/main/jni/: CMakeLists.txt  GPUIPCommon.cpp  GPUIPCommon.h  GraphicBufferEx.cpp  NubiaGLCopy.cpp
app/src/main/res/raw/: texture_oes2oes_fragment_shader.glsl
gradle/wrapper/: gradle-wrapper.properties
